# save-media

./: .gitignore  LICENSE  NOTICE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
docs/: design.md  store-submission.md
native-host/: host.py  install.py  pyproject.toml
native-host/savemedia_host/: installer.py  ytdlp.py
native-host/tests/: test_installer.py  test_ytdlp.py
