[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "savemedia-host"
version = "0.0.1"
description = "savemedia native messaging host"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "savemedia"}]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pyinstaller>=6.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["savemedia_host*"]

[project.scripts]
savemedia-host-installer = "savemedia_host.installer:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
